Bug 61410 - fix performance problem with fully opaque 8-bit alpha images.  Also cleanse/shuffle nsImageGTK for size and remove some extra parentheses. r=blizzard, sr=brendan